--- a/HouseRentalMVC/appsettings.json
+++ b/HouseRentalMVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HouseRentalMVC-272B4B5A-98AC-4EE5-8122-95588185824B;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server =DESKTOP-P03PBCK\\SQLSERVER;Database=RentSystemMVC; Integrated Security=True;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
